--- a/app/src/main/res/layout/fragment_cen.xml
+++ b/app/src/main/res/layout/fragment_cen.xml
@@ -8,5 +8,5 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="第三页" />
+        android:text="第四页" />
 </FrameLayout>
