--- a/app/src/main/res/layout/fragment_sug.xml
+++ b/app/src/main/res/layout/fragment_sug.xml
@@ -7,6 +7,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#757575">
+
+        </LinearLayout>
 
         <com.maple.touriseguide.Util.MyScrollView
             android:id="@+id/myScrollView"
