--- a/app/src/main/res/drawable/selector_background_underline.xml
+++ b/app/src/main/res/drawable/selector_background_underline.xml
@@ -19,14 +19,14 @@
     <item
         android:bottom="1dp">
         <shape>
-            <solid android:color="@color/colorLineChoosed"/>
+            <solid android:color="#d20703"/>
         </shape>
     </item>
 
     <item
         android:bottom="3dp">
         <shape>
-            <solid android:color="@color/colorBackground"/>
+            <solid android:color="#252525"/>
         </shape>
     </item>
 </layer-list>
