--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,23 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/background"
     android:orientation="vertical"
     tools:context="com.maple.touriseguide.Activity.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#5fffffff"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.35">
+            android:layout_weight="0.35"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="50dp"
+                android:src="@mipmap/logo" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
                 android:gravity="center">
 
                 <RadioGroup
@@ -32,7 +42,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginRight="65dp"
+                        android:layout_marginRight="55dp"
                         android:checked="true"
                         android:text="游客登录" />
 
@@ -49,13 +59,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5"
-            android:orientation="vertical"
-            android:weightSum="1">
+            android:layout_weight="0.4"
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/phone"
-                android:layout_width="wrap_content"
+                android:layout_width="240dp"
                 android:layout_height="42dp"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
@@ -65,7 +74,7 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="wrap_content"
+                android:layout_width="240dp"
                 android:layout_height="42dp"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
@@ -75,11 +84,13 @@
 
             <Button
                 android:id="@+id/login"
-                android:layout_width="270dp"
-                android:layout_height="wrap_content"
+                android:layout_width="240dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:text="登录" />
+                android:background="@drawable/shape_corner"
+                android:text="登录"
+                android:textColor="#ffffff" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -96,9 +107,9 @@
                         android:id="@+id/reset_pw"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="100dp"
                         android:clickable="true"
                         android:text="忘记密码？"
-                        android:layout_marginRight="115dp"
                         android:textColor="#0600ad" />
 
                     <TextView
