--- a/app/src/main/res/layout/fragment_sug.xml
+++ b/app/src/main/res/layout/fragment_sug.xml
@@ -11,7 +11,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#757575">
+            android:background="#252525"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="景点推荐"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
