--- a/app/src/main/res/layout/fragment_tea.xml
+++ b/app/src/main/res/layout/fragment_tea.xml
@@ -12,6 +12,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:background="#252525"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -52,15 +53,18 @@
                 android:id="@+id/team"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
+                android:layout_marginRight="10dp"
                 android:clickable="true"
                 android:gravity="right">
 
                 <TextView
+                    android:id="@+id/text_team"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="团队成员" />
+                    android:text="团队成员"
+                    android:layout_marginTop="5dp"
+                    android:textColor="#ffffff" />
             </LinearLayout>
 
             <View
@@ -73,15 +77,18 @@
                 android:id="@+id/tourise"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
+                android:layout_marginLeft="10dp"
                 android:clickable="true"
                 android:gravity="left">
 
                 <TextView
+                    android:id="@+id/text_tourise"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="旅途点滴" />
+                    android:layout_marginTop="5dp"
+                    android:text="旅途点滴"
+                    android:textColor="#ffffff" />
             </LinearLayout>
 
         </LinearLayout>
