--- a/app/src/main/res/layout/chi_fragment_member.xml
+++ b/app/src/main/res/layout/chi_fragment_member.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
+        <com.maple.touriseguide.Util.MyListView
             android:id="@+id/member"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
