--- a/app/src/main/res/layout/chi_fragment_share.xml
+++ b/app/src/main/res/layout/chi_fragment_share.xml
@@ -8,10 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="second" />
+        <ListView
+            android:id="@+id/share"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />s
 
     </LinearLayout>
 </FrameLayout>
