--- a/app/src/main/res/layout/chi_fragment_share.xml
+++ b/app/src/main/res/layout/chi_fragment_share.xml
@@ -4,14 +4,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/share"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />s
-
-    </LinearLayout>
+            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_margin="5dp">
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@mipmap/icon_tem" />
+        </LinearLayout>
+    </FrameLayout>
 </FrameLayout>
