--- a/app/src/main/res/layout/activity_urgent.xml
+++ b/app/src/main/res/layout/activity_urgent.xml
@@ -53,6 +53,7 @@
                 app:border_width="3dp" />
 
             <TextView
+                android:id="@+id/callOrMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
