--- a/app/src/main/res/layout/item_sug.xml
+++ b/app/src/main/res/layout/item_sug.xml
@@ -7,7 +7,8 @@
     <FrameLayout
         android:id="@+id/sugs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clickable="true">
 
         <ImageView
             android:id="@+id/sug_img"
