--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -2,31 +2,126 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <com.maple.touriseguide.Util.CircleImageView
             android:id="@+id/head_img"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
+            android:layout_marginTop="70dp"
             android:src="@drawable/tx"
             app:border_color="#efefef"
-            app:border_width="2dp"
-            android:layout_marginTop="30dp"/>
-        <TextView
+            app:border_width="2dp" />
+
+        <EditText
             android:id="@+id/user_name"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@null"
+            android:focusableInTouchMode="false"
+            android:gravity="center"
+            android:hint="请输入姓名"
+            android:padding="10dp"
             android:text="test"
-            android:layout_margin="10dp"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/account"
+                android:layout_width="150dp"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:text=""
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/male"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="45dp"
+                android:src="@mipmap/pre_male" />
+
+            <ImageView
+                android:id="@+id/female"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@mipmap/female" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            android:gravity="center_horizontal"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:text="签名："
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/edit_motto"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.01"
+                android:background="@null"
+                android:focusableInTouchMode="false"
+                android:hint="我想说点啥..."
+                android:padding="10dp"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="50dp">
+
+            <Button
+                android:id="@+id/change"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@drawable/shape_corner2"
+                android:text="修改"
+                android:textColor="#ffffff" />
+
+            <Button
+                android:id="@+id/save"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@drawable/shape_corner"
+                android:text="保存"
+                android:textColor="#ffffff"
+                android:visibility="gone" />
+        </FrameLayout>
     </LinearLayout>
-
-
 </LinearLayout>
